@@ -36,7 +36,7 @@ Release 1.1 Start 14/02/2021
 19. added hmac_sha224, hmac_sha384 functions
 - 30/06/2021
 20. strerr.h: added STRERR2, STRERR3, STRERR_SYS2 macros
-21. envdir.c: hyperlink feature using .dir link/dir to traverse multiple
+21. envdir.c: hyperlink feature using .envdir link/dir to traverse multiple
     directories.
 - 03/07/2021
 22. added prot.c, prot.h, qgetpw functions
@@ -50,8 +50,11 @@ Release 1.1 Start 14/02/2021
 - 10/07/2021
 27. qgetpwgr.c: added qgetserv.. functions to read /etc/services
 11/07/2021
-28. envdir.c: set variables from .dir first to prevent .dir from overriding
+28. envdir.c: set variables from .envdir first to prevent .envdir from overriding
     main
+12/07/2021
+21. envdir.c: added feature to process .envfile and .envdir as a file
+    containing list of directories
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
